# fhs-garch-risk-engine

./: .dockerignore  .gitignore  README.md  RESULTS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: dashboard.py
fhsvar/: backtest.py  benchmarks.py  compare.py  config.py  data.py  diagnostics.py  eval_vol.py  fhs.py  mean_model.py  metrics.py  multiday.py  plot_crisis.py  residuals.py  returns.py  volatility.py
results/: backtest_comparison.csv
tests/: test_fhs.py
